--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,8 @@
   box-sizing: border-box;
   font-family: "Inter", sans-serif;
   scrollbar-width: thin;
+  overflow-x: hidden;
 }
-
 /* Webkit browsers */
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
@@ -56,5 +56,25 @@ input[type="number"] {
   color: #666; /* A lighter color */
 }
 .policy-list div {
-  margin: 7px 0;
+  margin: 1rem 0;
+}
+
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+  width: 12px; /* Width of the scrollbar */
+}
+
+body::-webkit-scrollbar-track {
+  background: #f1f1f1; /* Color of the track */
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #888; /* Color of the thumb */
+  border-radius: 10px; /* Roundness of the thumb */
+  border: 3px solid #f1f1f1; /* Padding around the thumb */
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background: #555; /* Color when hovered */
 }
