--- a/src/index.css
+++ b/src/index.css
@@ -59,22 +59,55 @@ input[type="number"] {
   margin: 1rem 0;
 }
 
-
-/* Hide scrollbar for Chrome, Safari and Opera */
-body::-webkit-scrollbar {
+html::-webkit-scrollbar {
   width: 12px; /* Width of the scrollbar */
+  height: 12px; /* Height of the scrollbar */
 }
 
-body::-webkit-scrollbar-track {
-  background: #f1f1f1; /* Color of the track */
+html::-webkit-scrollbar-track {
+  background: transparent; /* Transparent background */
 }
 
-body::-webkit-scrollbar-thumb {
+html::-webkit-scrollbar-thumb {
   background-color: #888; /* Color of the thumb */
   border-radius: 10px; /* Roundness of the thumb */
-  border: 3px solid #f1f1f1; /* Padding around the thumb */
+  border: 3px solid transparent; /* Ensuring the thumb is visible */
 }
 
-body::-webkit-scrollbar-thumb:hover {
+html::-webkit-scrollbar-thumb:hover {
   background: #555; /* Color when hovered */
+}
+
+html::-webkit-scrollbar-button {
+  display: none; /* Hide the arrow buttons */
+}
+
+/* For Firefox */
+html {
+  scrollbar-width: thin; /* Make the scrollbar thinner */
+  scrollbar-color: #888 transparent; /* Thumb color and transparent track */
+}
+
+/* For Edge */
+html::-ms-scrollbar {
+  width: 12px; /* Width of the scrollbar */
+  height: 12px; /* Height of the scrollbar */
+}
+
+html::-ms-scrollbar-track {
+  background: transparent; /* Transparent background */
+}
+
+html::-ms-scrollbar-thumb {
+  background-color: #888; /* Color of the thumb */
+  border-radius: 10px; /* Roundness of the thumb */
+  border: 3px solid transparent; /* Ensuring the thumb is visible */
+}
+
+html::-ms-scrollbar-thumb:hover {
+  background: #555; /* Color when hovered */
+}
+
+html::-ms-scrollbar-button {
+  display: none; /* Hide the arrow buttons */
 }
